K/k8sci-oA6BW/k8sci.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-k8sci-dashboard
  namespace: tekton-pipelines
  labels:
    helm.sh/chart: k8sci-0.1.13
    app.kubernetes.io/name: k8sci
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.15.0
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: dashboard.chart-example.local
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-k8sci
  labels:
    helm.sh/chart: k8sci-0.1.13
    app.kubernetes.io/name: k8sci
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.15.0
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: chart-example.local
      http:
        paths:
          - path: /
            backend:
              serviceName: el-release-name-k8sci-gh-interceptor
              servicePort: 8080
